Added nano bar action

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -89,7 +89,7 @@
         {% endblock %}
 
         <!-- Main body -->
-        <div class="wrapper">
+        <div class="wrapper" nanobar>
             <!-- Sidebar -->
             <div class="sidebar">
                 <header>
@@ -120,7 +120,6 @@
             </div>
 
             <header class="page-header">
-                    
                 {% if user.is_authenticated %}
                 <div class="user-area">
                     <span>
