--- a/sass/base.scss
+++ b/sass/base.scss
@@ -1352,6 +1352,13 @@ body.modal-open {
         }
       }
 
+      .param-field {
+
+        &.loading {
+          opacity: 0;
+        }
+      }
+
     }
   }
 
