--- a/web/templates/list/view.html
+++ b/web/templates/list/view.html
@@ -197,7 +197,7 @@
         <div class="wittl-wrapper">
             <form class="nl-form wittl-form">
                 <input type="hidden" ng-model="listId" value="{{ list.id }}" ng-init="listID={{ list.id }}" />
-                <ul class="wittls">
+                <ul class="wittls" ui-sortable ng-model="clauses">
                     <li class="wittl-clause" ng-repeat="clause in clauses">
                         <div class="wittl-conjunction">
                             and 
@@ -239,6 +239,7 @@
     <script src="/static/web/js/vendor/angular/angular-cookies.js"></script>
     <script src="/static/web/js/vendor/angular/angular-isotope.min.js"></script>
     <script src="/static/web/js/vendor/angular/angular-nanobar.js"></script>
+    <script src="/static/web/js/vendor/angular/angular-sortable.js"></script>
 
     <script src="/static/web/js/wittl/filters.js"></script>
     <script src="/static/web/js/wittl/directives.js"></script>
