--- a/web/templates/list/list.html
+++ b/web/templates/list/list.html
@@ -114,6 +114,7 @@
     <script src="/static/web/js/vendor/angular/angular-cookies.js"></script>
     <script src="/static/web/js/vendor/angular/angular-isotope.min.js"></script>
     <script src="/static/web/js/vendor/angular/angular-nanobar.js"></script>
+    <script src="/static/web/js/vendor/angular/angular-sortable.js"></script>
 
     <script src="/static/web/js/wittl/filters.js"></script>
     <script src="/static/web/js/wittl/directives.js"></script>
