Added link to favourites
Removed extra icon

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -67,13 +67,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{% url 'favourites' %}">
                         Starred
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        Something
                     </a>
                 </li>
                 <li>
@@ -102,13 +97,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="{% url 'favourites' %}">
                             <i class="icon_star_alt"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="icon_ribbon_alt"></i>
                         </a>
                     </li>
                     <li>
